--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -79,9 +79,10 @@
         "description": "$string:EntryAbility_desc",
         "icon": "$media:wechat_logo",
         "label": "$string:EntryAbility_label",
-        "startWindowIcon": "$media:icon",
+        "startWindowIcon": "$media:wechat_logo",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
+        //在配置入口图标和入口标签时，希望在桌面上显示该UIAbility的图标，则需要在skills标签下面的entities中添加"entity.system.home"、actions中添加"action.system.home"。同一个应用有多个UIAbility配置上述字段时，桌面上会显示出多个图标，分别对应各自的UIAbility。
         "skills": [
           {
             "entities": [
