增加Taoya权限请求框架，通过在module.json中配置所需要的权限，并在EntryAbility中配置Taoyao，请求所有所有需要的权限，实测发现请求到麦克风权限后，可在存储中生成录音文件（ohpm install @shijing/taoyao 为安装指令）

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -67,6 +67,18 @@
           ],
           "when": "inuse"
         }
+      },
+      {
+        // 允许应用获取录音权限  权限为 user_grant 时，还需添加授权原因
+        "name": "ohos.permission.MICROPHONE",
+        "reason": "$string:record_media_permission_reason",
+        "usedScene": {}
+      },
+      {
+        // 允许应用获取蓝牙权限  权限为 user_grant 时，还需添加授权原因
+        "name": "ohos.permission.ACCESS_BLUETOOTH",
+        "reason": "$string:bluetooth_info_permission_reason",
+        "usedScene": {}
       }
     ],
     "deliveryWithInstall": true,
