--- a/oh-package.json5
+++ b/oh-package.json5
@@ -10,7 +10,8 @@
   "main": "",
   "version": "1.0.0",
   "dependencies": {
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.7",
+    "@shijing/taoyao": "^1.0.5"
   },
   "dynamicDependencies": {}
 }
